Move README.md to correct position; make game unable to be updated with invalid mine count; expose component generator validation; add padding around game to circumvent scrollbar getting in the way

--- a/minesweeper/src/app/Game/Game.module.css
+++ b/minesweeper/src/app/Game/Game.module.css
@@ -3,5 +3,5 @@
 }
 
 .Game>div>.Rows {
-    border: 1px solid var(--border-color-dark);
+    border-top: 1px solid var(--border-color-dark);
 }
